@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.4.26-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-04-26 04:52:52, took 00:12:38, with 60 workers, on 3434 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2024-04-26 16:11:23, took 00:12:34, with 60 workers, on 3436 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -146,6 +146,8 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth29.tst">conn-eth29.tst</a></td><td>success</td><td>secure arp/nd</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth30.tst">conn-eth30.tst</a></td><td>success</td><td>ethernet trill-mt encapsulation</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-eth31.tst">conn-eth31.tst</a></td><td>success</td><td>ethernet trill-fgl encapsulation</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-eth32.tst">conn-eth32.tst</a></td><td>success</td><td>secondary networks over ethernet</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-eth33.tst">conn-eth33.tst</a></td><td>success</td><td>secondary networks over dot1q vlan</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-etherip01.tst">conn-etherip01.tst</a></td><td>success</td><td>etherip over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-etherip02.tst">conn-etherip02.tst</a></td><td>success</td><td>etherip over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-etherip03.tst">conn-etherip03.tst</a></td><td>success</td><td>etherip over loopback</td></tr>
